--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -23,7 +23,7 @@
 }
 
 .navigation {
-  min-height: 450px;
+  min-height: 400px;
   margin: 50px 0;
   padding: 50px 0;
   display: flex;
